--- a/index.html
+++ b/index.html
@@ -131,41 +131,41 @@
     <div class="intro-body">
 
 
-            <div >
-                <table id="news_container">
-                    <tr>
-                        <td>
-                            <div class="triangle_box">
-                                <div class="triangle_text">Nächstes Treffen</div>
-                                <div class="triangle_right"></div>
-                            </div>
-                        </td>
-                        <td>20. November</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="triangle_box">
-                                <div class="triangle_text">neu</div>
-                                <div class="triangle_right"></div>
-                            </div>
-                        </td>
-                        <td><a href="raetsel.html">Rätsel der Woche</a></td>
-                    </tr>
-                </table>
+        <div>
+            <table id="news_container">
+                <tr>
+                    <td>
+                        <div class="triangle_box">
+                            <div class="triangle_text">Nächstes Treffen</div>
+                            <div class="triangle_right"></div>
+                        </div>
+                    </td>
+                    <td>4. Dezember</td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="triangle_box">
+                            <div class="triangle_text">neu</div>
+                            <div class="triangle_right"></div>
+                        </div>
+                    </td>
+                    <td><a href="raetsel.html">Rätsel der Woche</a></td>
+                </tr>
+            </table>
 
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1 class="brand-heading">CoderDojo</h1>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="brand-heading">CoderDojo</h1>
 
-                    <h2 class="brand-heading">Karlsruhe</h2>
+                <h2 class="brand-heading">Karlsruhe</h2>
 
-                    <p class="intro-text">Herzlich willkommen auf der Webseite des CoderDojo Karlsruhe!
-                        Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
-                    <a href="#about" class="btn btn-circle page-scroll">
-                        <i class="fa fa-angle-double-down animated"></i>
-                    </a>
-                </div>
+                <p class="intro-text">Herzlich willkommen auf der Webseite des CoderDojo Karlsruhe!
+                    Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
+                <a href="#about" class="btn btn-circle page-scroll">
+                    <i class="fa fa-angle-double-down animated"></i>
+                </a>
             </div>
         </div>
+    </div>
 
 </header>
 
@@ -229,8 +229,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">23</span>
-                                <span class="timeline-balloon-date-month">OKT</span>
+                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-month">NOV</span>
                             </div>
                         </a>
 
@@ -238,8 +238,8 @@
                                 href="#map"
                                 class="page-scroll">Seminarraum
                             236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30
-                            - 18:30
+                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
+                            - 19:00
                         </div>
                     </div>
 
@@ -247,7 +247,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-day">20</span>
                                 <span class="timeline-balloon-date-month">NOV</span>
                             </div>
                         </a>
@@ -270,8 +270,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">20</span>
-                                <span class="timeline-balloon-date-month">NOV</span>
+                                <span class="timeline-balloon-date-day">04</span>
+                                <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
 
@@ -287,7 +287,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">04</span>
+                                <span class="timeline-balloon-date-day">20</span>
                                 <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
