--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <tr>
                     <td>
                         <div class="triangle_box">
-                            <div class="triangle_text">neu</div>
+                            <div class="triangle_text">Neu</div>
                             <div class="triangle_right"></div>
                         </div>
                     </td>
@@ -216,7 +216,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p>Das nächste Treffen findet am Freitag, dem 25.09.2015 von 16.30 Uhr bis 18.30 Uhr im Seminarraum 236
+                <p>Das nächste Treffen findet am Freitag, dem 04.12.2015 von 17.00 Uhr bis 19:00 Uhr im Seminarraum 236
                     der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -287,7 +287,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">20</span>
+                                <span class="timeline-balloon-date-day">18</span>
                                 <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
