--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td>4. Dezember</td>
+                    <td>18. Dezember</td>
                 </tr>
                 <tr>
                     <td>
@@ -216,7 +216,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p>Das nächste Treffen findet am Freitag, dem 04.12.2015 von 17.00 Uhr bis 19:00 Uhr im Seminarraum 236
+                <p>Das nächste Treffen findet am Freitag, dem 18.12.2015 von 17.00 Uhr bis 19:00 Uhr im Seminarraum 236
                     der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -229,7 +229,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-day">20</span>
                                 <span class="timeline-balloon-date-month">NOV</span>
                             </div>
                         </a>
@@ -247,8 +247,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">20</span>
-                                <span class="timeline-balloon-date-month">NOV</span>
+                                <span class="timeline-balloon-date-day">04</span>
+                                <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
 
@@ -270,7 +270,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">04</span>
+                                <span class="timeline-balloon-date-day">18</span>
                                 <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
@@ -287,8 +287,25 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">18</span>
-                                <span class="timeline-balloon-date-month">DEZ</span>
+                                <span class="timeline-balloon-date-day">15</span>
+                                <span class="timeline-balloon-date-month">JAN</span>
+                            </div>
+                        </a>
+
+                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
+                                href="#map"
+                                class="page-scroll">Seminarraum
+                            236</a></div>
+                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
+                            - 19:00
+                        </div>
+                    </div>
+                    
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">29</span>
+                                <span class="timeline-balloon-date-month">JAN</span>
                             </div>
                         </a>
 
